--- a/index.html
+++ b/index.html
@@ -45,36 +45,34 @@
         }
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; background-color: var(--bg-color); color: var(--primary-text); }
         .app-container { display: flex; flex-direction: column; width: 100%; height: 100%; }
-        #main-tabs {
-            display: flex;
-            padding: 12px 24px 0 24px;
-            background-color: var(--sidebar-color);
-            border-bottom: 1px solid var(--border-color);
-            flex-shrink: 0;
-        }
-        .main-tab-btn {
-            flex: 1;
-            max-width: 120px;
-            padding: 12px;
-            border: none;
-            border-bottom: 3px solid transparent;
-            background: none;
-            font-size: 16px;
-            font-weight: 600;
-            color: var(--secondary-text);
-            cursor: pointer;
-        }
+        
+#main-tabs {
+    display: flex;
+    align-items: center;
+    gap: 8px; /* ✨ 버튼 사이에 약간의 간격을 줍니다. */
+}
+
+#auth-container {
+    display: flex; /* 내부 요소들을 정렬하기 위해 flex 추가 */
+    align-items: center; /* 세로 중앙 정렬 */
+    gap: 10px; /* 버튼과 텍스트 사이 간격 */
+}
+.main-tab-btn {
+    padding: 12px 16px; /* ✨ 좌우 여백을 늘려줍니다. */
+    border: none;
+    border-bottom: 3px solid transparent;
+    background: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--secondary-text);
+    cursor: pointer;
+    white-space: nowrap; /* ✨ 글자가 절대 줄바꿈되지 않도록 설정합니다. */
+}
         .main-tab-btn.active {
             color: var(--accent-color);
             border-bottom-color: var(--accent-color);
         }
-        #auth-container {
-            padding: 10px 24px;
-            background-color: var(--sidebar-color);
-            text-align: right;
-            border-bottom: 1px solid var(--border-color);
-            flex-shrink: 0;
-        }
+  
         .input-column, .list-column {
             flex-grow: 1;
             min-height: 0;
@@ -181,21 +179,72 @@
             .modal-content { width: 100%; height: 100%; border-radius: 0; }
             #dropZone-text { padding: 0 10px; }
         }
+
+/* 로그인/로그아웃 버튼 스타일 */
+#loginBtn, #logoutBtn {
+    padding: 6px 12px; /* 버튼 높이를 줄임 */
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    background-color: var(--surface-color);
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
+#loginBtn:hover, #logoutBtn:hover {
+    background-color: #e9ebee;
+}
+
+/* Google 로그인 버튼 전용 스타일 */
+#loginBtn {
+    display: inline-flex; /* 아이콘과 텍스트 정렬을 위해 flex 사용 */
+    align-items: center;
+    gap: 8px;
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+    color: white;
+}
+#loginBtn:hover {
+    background-color: #1868cd;
+}
+
+/* 구글 로고 아이콘 (SVG) */
+#loginBtn::before {
+    content: '';
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    background-color: white;
+    -webkit-mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="%23EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"/><path fill="%234285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"/><path fill="%23FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"/><path fill="%2334A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"/><path fill="none" d="M0 0h48v48H0z"/></svg>') center/contain no-repeat;
+    mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="%23EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"/><path fill="%234285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"/><path fill="%23FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"/><path fill="%2334A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"/><path fill="none" d="M0 0h48v48H0z"/></svg>') center/contain no-repeat;
+}
+.app-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 24px;
+    background-color: var(--sidebar-color);
+    border-bottom: 1px solid var(--border-color);
+    flex-shrink: 0;
+}
     </style>
 </head>
 <body>
 
-    <main class="app-container">
+<main class="app-container">
+    <header class="app-header">
         <div id="main-tabs">
             <button class="main-tab-btn active" data-tab="input">업로드</button>
             <button class="main-tab-btn" data-tab="list">저장공간</button>
         </div>
-        <div id="auth-container" style="padding: 10px 24px; background-color: var(--sidebar-color); text-align: right;">
+        <div id="auth-container">
             <span id="userInfo" style="font-weight: 600; margin-right: 10px; display: none;"></span>
             <button id="loginBtn">Google 로그인</button>
             <button id="logoutBtn" style="display: none;">로그아웃</button>
         </div>
-        <section class="input-column">
+    </header>
+    <section class="input-column">
             <div class="tab-buttons">
                 <button class="tab-btn active" data-tab="text">텍스트</button>
                 <button class="tab-btn" data-tab="link">링크</button>
@@ -1060,7 +1109,6 @@ secretUploadBtn.addEventListener('click', () => {
         }
     });
 
-    // ✨ [추가] 비밀 공간 드래그 앤 드롭 기능 활성화
     new Sortable(secretListContainer, {
         animation: 150,
         ghostClass: 'sortable-ghost',
