--- a/index.html
+++ b/index.html
@@ -228,6 +228,12 @@
     border-bottom: 1px solid var(--border-color);
     flex-shrink: 0;
 }
+
+/* ✨ 라인 구간 선택 시작 지점 하이라이트 스타일 */
+.cm-start-line {
+    background-color: rgba(66, 133, 244, 0.2);
+}
+
     </style>
 </head>
 <body>
@@ -1184,7 +1190,7 @@ secretUploadBtn.addEventListener('click', () => {
 
         if (user) {
             // 사용자가 로그인한 경우
-            userInfo.textContent = `${user.displayName}님 환영합니다.`;
+            userInfo.textContent = `${user.displayName}님`;
             userInfo.style.display = 'inline';
             loginBtn.style.display = 'none';
             logoutBtn.style.display = 'inline';
