--- a/index.html
+++ b/index.html
@@ -1240,6 +1240,50 @@ secretUploadBtn.addEventListener('click', () => {
         });
         themeToggleBtn.innerHTML = savedTheme === 'material-darker' ? '☀️' : '🌙';
         htmlEditor.on('change', updateSaveButtonState);
+        let startLine = null; // 구간 선택 시작 라인을 저장하는 변수
+
+        htmlEditor.on('gutterClick', function(cm, line, gutter, clickEvent) {
+            if (startLine === null) {
+                // 1. 첫 번째 클릭: 시작 라인 지정
+                startLine = line;
+                cm.addLineClass(line, 'background', 'cm-start-line');
+                showAlert('복사할 끝 라인을 선택하세요.');
+            } else {
+                // 2. 두 번째 클릭: 구간 선택 및 복사
+                const endLine = line;
+                
+                // 만약 같은 라인을 다시 누르면 취소
+                if (startLine === endLine) {
+                    cm.removeLineClass(startLine, 'background', 'cm-start-line');
+                    startLine = null;
+                    showAlert('구간 복사가 취소되었습니다.');
+                    return;
+                }
+
+                // 시작 라인과 끝 라인 정렬
+                const from = Math.min(startLine, endLine);
+                const to = Math.max(startLine, endLine);
+
+                // 해당 구간의 텍스트 가져오기
+                const textToCopy = cm.getRange(
+                    { line: from, ch: 0 },
+                    { line: to, ch: cm.getLine(to).length }
+                );
+
+                // 클립보드에 복사
+                navigator.clipboard.writeText(textToCopy).then(() => {
+                    showAlert(`✅ ${from + 1} ~ ${to + 1} 라인이 복사되었습니다.`);
+                }).catch(err => {
+                    showAlert('❌ 복사에 실패했습니다.');
+                    console.error('Copy failed', err);
+                });
+
+                // 초기화
+                cm.removeLineClass(startLine, 'background', 'cm-start-line');
+                startLine = null;
+            }
+        });
+
         
         addEventListeners();
         // loadItemsFromFirebase(); // This should be called inside onAuthStateChanged
