index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <button class="tab-btn active" data-tab="text">텍스트</button>
                 <button class="tab-btn" data-tab="link">링크</button>
                 <button class="tab-btn" data-tab="file">파일</button>
-                <button class="tab-btn" data-tab="html">HTML 뷰어</button>
+                <button class="tab-btn" data-tab="html">HTML</button>
             </div>
             <input type="text" id="titleInput" class="input-field" placeholder="제목을 입력하세요 (필수)">
             <div id="html-actions-container">
